<resources>
    <string name="app_name">CalendarApp</string>

    <!-- MainActivity -->
    <string name="header">Calendar</string>
    <string name="subheader">Select a date for your event</string>
    <string name="create_new_event">Create New Event</string>

    <!-- CreateEvent -->
    <string name="create_event_header">Create Event</string>
    <string name="all_day">All Day Event</string>

    <!-- Time Select -->
    <string name="select_time">Select Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>

    <string name="title_hint">Title</string>
    <string name="desc_hint">Description</string>
    <string name="location_hint">Location</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
</resources>
